cluster/prometheus/base/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  labels:
    app: grafana
    release: prometheus-operator
  name: prometheus-operator-grafana
  namespace: monitoring
spec:
  rules:
  - host: grafana.localtest.me
    http:
      paths:
      - backend:
          serviceName: prometheus-operator-grafana
          servicePort: 80
        path: /
